--- a/index.html
+++ b/index.html
@@ -219,13 +219,22 @@
             <div class="text-center mb-8">
                 <h2 class="text-3xl font-bold text-gray-900 dark:text-white mb-2" data-i18n="daily_puzzle">今日のパズル</h2>
                 <p class="text-gray-600 dark:text-gray-400" data-i18n="puzzle_date" id="puzzleDate">2024年1月15日</p>
+                
+                <!-- パズル選択 -->
+                <div class="mt-4 mb-4">
+                    <label for="puzzleSelect" class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-2" data-i18n="puzzle_select">パズル選択</label>
+                    <select id="puzzleSelect" class="w-full max-w-xs px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md shadow-sm bg-white dark:bg-gray-800 text-gray-900 dark:text-white focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500">
+                        <!-- オプションはJavaScriptで生成 -->
+                    </select>
+                </div>
+                
                 <div class="mt-4 flex justify-center space-x-4">
                     <span class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-green-100 text-green-800 dark:bg-green-900 dark:text-green-300">
                         <i class="fas fa-star mr-1"></i>
                         <span data-i18n="beginner">初級</span>
                     </span>
                     <span class="inline-flex items-center px-3 py-1 rounded-full text-sm font-medium bg-blue-100 text-blue-800 dark:bg-blue-900 dark:text-blue-300">
-                        7×7
+                        動的サイズ
                     </span>
                 </div>
             </div>
